  parameter.

- _winreg's HKEY object has gained __enter__ and __exit__ methods to support
  the context manager protocol.  The _winreg module also gained a new function
  ``ExpandEnvironmentStrings`` to expand REG_EXPAND_SZ keys.

- itertools.starmap() now accepts any iterable input. Previously, it required
  the function inputs to be tuples.

- Issue #1646: Make socket support TIPC. The socket module now has support
  for TIPC under Linux, see http://tipc.sf.net/ for more information.

- Added interface for Windows' WSAIoctl to socket object and added an example
  for a simple network sniffer.

- Bug #1301: Bad assert in _tkinter fixed.

- Added bdist_wininst executable for VS 2008.

- Bug #1604: collections.deque.__init__(iterable) now clears any prior contents
  before adding elements from the iterable.  This fix brings the behavior into
  line with that for list.__init__().

- Added wide char functions to msvcrt module: getwch, getwche, putwch and
  ungetwch. The functions accept or return unicode.

- os.access now returns True on Windows for any existing directory.

- Added warnpy3k function to the warnings module.

- Marshal.dumps() now expects exact type matches for int, long, float, complex,
  tuple, list, dict, set, and frozenset.  Formerly, it would silently miscode
  subclasses of those types.  Now, it raises a ValueError instead.

- Patch #1388440: Add set_completion_display_matches_hook and
  get_completion_type to readline.

- Bug #1649098: Avoid declaration of zero-sized array declaration in
  structure.

- Removed the rgbimg module; been deprecated since Python 2.5.

- Bug #1721309: prevent bsddb module from freeing random memory.

- Bug #1233: fix bsddb.dbshelve.DBShelf append method to work as
  intended for RECNO databases.

- pybsddb.sf.net Bug #477182: Load the database flags at database open
  time so that opening a database previously created with the DB_DUP or
  DB_DUPSORT flag set will keep the proper behavior on subsequent opens.